--- a/index.html
+++ b/index.html
@@ -20,205 +20,239 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="page-header">
-      <nav class="top-navigation">
-        <a class="page-logo" href="./index.html"
-          >Web<span class="second-part-logo">Studio</span></a
-        >
-        <ul class="navigation-menu">
-          <li class="navigation-menu-item">
-            <a class="navigation-menu-link" href="./index.html">Studio</a>
-          </li>
-          <li class="navigation-menu-item">
-            <a class="navigation-menu-link" href="">Portfolio</a>
-          </li>
-          <li class="navigation-menu-item">
-            <a class="navigation-menu-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="adress-general">
-        <ul class="address-menu">
-          <li class="address-menu-item">
-            <a class="address-menu-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-menu-item">
-            <a class="address-menu-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a class="page-logo" href="./index.html"
+            >Web<span class="second-part-logo">Studio</span></a
+          >
+          <ul class="navigation-menu-list">
+            <li class="navigation-menu-item">
+              <a class="navigation-menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="navigation-menu-item">
+              <a class="navigation-menu-link" href="">Portfolio</a>
+            </li>
+            <li class="navigation-menu-item">
+              <a class="navigation-menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-adress">
+          <ul class="header-address-menu-list">
+            <li class="header-address-menu-item">
+              <a
+                class="header-address-menu-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address-menu-item">
+              <a class="header-address-menu-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="order-service-btn" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="order-service-btn" type="button">Order Service</button>
+        </div>
       </section>
       <section class="advantages">
-        <h2>Our advantages</h2>
-        <ul class="advantages-list">
-          <li class="advantages-list-item">
-            <h3 class="advantages-list-title">Strategy</h3>
-            <p class="advantages-list-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="advantages-list-item">
-            <h3 class="advantages-list-title">Punctuality</h3>
-            <p class="advantages-list-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="advantages-list-item">
-            <h3 class="advantages-list-title">Diligence</h3>
-            <p class="advantages-list-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="advantages-list-item">
-            <h3 class="advantages-list-title">Technologies</h3>
-            <p class="advantages-list-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container advantages-container">
+          <h2 class="advantages-title visually-hidden">Our advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Strategy</h3>
+              <p class="advantages-list-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Punctuality</h3>
+              <p class="advantages-list-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Diligence</h3>
+              <p class="advantages-list-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Technologies</h3>
+              <p class="advantages-list-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="members-team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Mark Guerrero</h3>
-            <p class="team-list-text">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Tom Ford</h3>
-            <p class="team-list-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Camila Garcia</h3>
-            <p class="team-list-text">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Daniel Wilson</h3>
-            <p class="team-list-text">Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                class="team-list-img"
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero photo"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-data">
+                <h3 class="team-list-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-img tom-ford"
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford photo"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-data">
+                <h3 class="team-list-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-img"
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia photo"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-data">
+                <h3 class="team-list-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-img"
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson photo"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-data">
+                <h3 class="team-list-title">Daniel Wilson</h3>
+                <p class="team-list-text">Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="studio-portfolio" id="studio-portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/banking-app.jpg"
-              alt="Banking App photo"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-title">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment photo"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-title">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/meditation-app.jpg"
-              alt="Meditation App photo"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-title">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service photo"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-title">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations photo"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-title">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/online-courses.jpg"
-              alt="Online Courses photo"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-title">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/banking-app.jpg"
+                alt="Banking App photo"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-data">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment photo"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-data">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/meditation-app.jpg"
+                alt="Meditation App photo"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-data">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service photo"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-data">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations photo"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-data">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/online-courses.jpg"
+                alt="Online Courses photo"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-data">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a class="page-logo" href="./index.html"
-        >Web<span class="footer-logo">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="page-logo" href="./index.html"
+          >Web<span class="footer-logo">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
