--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </main>
     <footer class="page-footer">
       <div class="container footer-container">
-        <a class="page-logo" href="./index.html"
+        <a class="page-logo footer" href="./index.html"
           >Web<span class="footer-logo">Studio</span></a
         >
         <p class="footer-text">
