--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   height="64"
                   aria-label="antenna icon"
                 >
-                  <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Strategy</h3>
@@ -94,7 +94,7 @@
                   height="64"
                   aria-label="clock icon"
                 >
-                  <use href="./images/icons/sprite.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Punctuality</h3>
@@ -111,7 +111,7 @@
                   height="64"
                   aria-label="diagram icon"
                 >
-                  <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Diligence</h3>
@@ -128,7 +128,7 @@
                   height="64"
                   aria-label="astronaut icon"
                 >
-                  <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Technologies</h3>
@@ -168,7 +168,7 @@
                           aria-label="instagram icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-instagram-our-team"
+                            href="./images/icons.svg#icon-instagram-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -185,7 +185,7 @@
                           aria-label="twitter icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-twitter-our-team"
+                            href="./images/icons.svg#icon-twitter-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -201,7 +201,7 @@
                           aria-label="facebook icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-facebook-our-team"
+                            href="./images/icons.svg#icon-facebook-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -217,7 +217,7 @@
                           aria-label="linkedin icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-linkedin-our-team"
+                            href="./images/icons.svg#icon-linkedin-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -250,7 +250,7 @@
                           aria-label="instagram icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-instagram-our-team"
+                            href="./images/icons.svg#icon-instagram-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -267,7 +267,7 @@
                           aria-label="twitter icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-twitter-our-team"
+                            href="./images/icons.svg#icon-twitter-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -283,7 +283,7 @@
                           aria-label="facebook icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-facebook-our-team"
+                            href="./images/icons.svg#icon-facebook-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -299,7 +299,7 @@
                           aria-label="linkedin icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-linkedin-our-team"
+                            href="./images/icons.svg#icon-linkedin-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -332,7 +332,7 @@
                           aria-label="instagram icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-instagram-our-team"
+                            href="./images/icons.svg#icon-instagram-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -349,7 +349,7 @@
                           aria-label="twitter icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-twitter-our-team"
+                            href="./images/icons.svg#icon-twitter-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -365,7 +365,7 @@
                           aria-label="facebook icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-facebook-our-team"
+                            href="./images/icons.svg#icon-facebook-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -381,7 +381,7 @@
                           aria-label="linkedin icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-linkedin-our-team"
+                            href="./images/icons.svg#icon-linkedin-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -414,7 +414,7 @@
                           aria-label="instagram icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-instagram-our-team"
+                            href="./images/icons.svg#icon-instagram-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -431,7 +431,7 @@
                           aria-label="twitter icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-twitter-our-team"
+                            href="./images/icons.svg#icon-twitter-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -447,7 +447,7 @@
                           aria-label="facebook icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-facebook-our-team"
+                            href="./images/icons.svg#icon-facebook-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -463,7 +463,7 @@
                           aria-label="linkedin icon"
                         >
                           <use
-                            href="./images/icons/sprite.svg#icon-linkedin-our-team"
+                            href="./images/icons.svg#icon-linkedin-our-team"
                           ></use>
                         </svg>
                       </div>
@@ -626,9 +626,7 @@
                     height="24"
                     aria-label="instagram icon"
                   >
-                    <use
-                      href="./images/icons/sprite.svg#icon-instagram-footer"
-                    ></use>
+                    <use href="./images/icons.svg#icon-instagram-footer"></use>
                   </svg>
                 </div>
               </a>
@@ -642,9 +640,7 @@
                     height="24"
                     aria-label="twitter icon"
                   >
-                    <use
-                      href="./images/icons/sprite.svg#icon-twitter-footer"
-                    ></use>
+                    <use href="./images/icons.svg#icon-twitter-footer"></use>
                   </svg>
                 </div>
               </a>
@@ -658,9 +654,7 @@
                     height="24"
                     aria-label="facebook icon"
                   >
-                    <use
-                      href="./images/icons/sprite.svg#icon-facebook-footer"
-                    ></use>
+                    <use href="./images/icons.svg#icon-facebook-footer"></use>
                   </svg>
                 </div>
               </a>
@@ -674,9 +668,7 @@
                     height="24"
                     aria-label="linkedin icon"
                   >
-                    <use
-                      href="./images/icons/sprite.svg#icon-linkedin-footer"
-                    ></use>
+                    <use href="./images/icons.svg#icon-linkedin-footer"></use>
                   </svg>
                 </div>
               </a>
