--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                 width="264"
                 height="260"
               />
-              <div class="team-list-data">
-                <h3 class="team-list-title">Mark Guerrero</h3>
-                <p class="team-list-text">Product Designer</p>
-              </div>
+              <!-- <div class="team-list-data"> -->
+              <h3 class="team-list-title">Mark Guerrero</h3>
+              <p class="team-list-text">Product Designer</p>
+              <!-- </div> -->
               <div class="team-list-social-media">
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
@@ -234,10 +234,10 @@
                 width="264"
                 height="260"
               />
-              <div class="team-list-data">
-                <h3 class="team-list-title">Tom Ford</h3>
-                <p class="team-list-text">Frontend Developer</p>
-              </div>
+              <!-- <div class="team-list-data"> -->
+              <h3 class="team-list-title">Tom Ford</h3>
+              <p class="team-list-text">Frontend Developer</p>
+              <!-- </div> -->
               <div class="team-list-social-media">
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
@@ -316,10 +316,10 @@
                 width="264"
                 height="260"
               />
-              <div class="team-list-data">
-                <h3 class="team-list-title">Camila Garcia</h3>
-                <p class="team-list-text">Marketing</p>
-              </div>
+              <!-- <div class="team-list-data"> -->
+              <h3 class="team-list-title">Camila Garcia</h3>
+              <p class="team-list-text">Marketing</p>
+              <!-- </div> -->
               <div class="team-list-social-media">
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
@@ -398,10 +398,10 @@
                 width="264"
                 height="260"
               />
-              <div class="team-list-data">
-                <h3 class="team-list-title">Daniel Wilson</h3>
-                <p class="team-list-text">Designer</p>
-              </div>
+              <!-- <div class="team-list-data"> -->
+              <h3 class="team-list-title">Daniel Wilson</h3>
+              <p class="team-list-text">Designer</p>
+              <!-- </div> -->
               <div class="team-list-social-media">
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
