change team section

--- a/index.html
+++ b/index.html
@@ -152,75 +152,66 @@
                 width="264"
                 height="260"
               />
-              <!-- <div class="team-list-data"> -->
-              <h3 class="team-list-title">Mark Guerrero</h3>
-              <p class="team-list-text">Product Designer</p>
-              <!-- </div> -->
-              <div class="team-list-social-media">
+              <div class="team-list-data">
+                <h3 class="team-list-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="instagram icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-instagram-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="instagram icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
 
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="twitter icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-twitter-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="twitter icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="facebook icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-facebook-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="facebook icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="linkedin icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-linkedin-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedin-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -234,75 +225,66 @@
                 width="264"
                 height="260"
               />
-              <!-- <div class="team-list-data"> -->
-              <h3 class="team-list-title">Tom Ford</h3>
-              <p class="team-list-text">Frontend Developer</p>
-              <!-- </div> -->
-              <div class="team-list-social-media">
+              <div class="team-list-data">
+                <h3 class="team-list-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="instagram icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-instagram-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="instagram icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
 
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="twitter icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-twitter-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="twitter icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="facebook icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-facebook-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="facebook icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="linkedin icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-linkedin-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedin-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -316,75 +298,66 @@
                 width="264"
                 height="260"
               />
-              <!-- <div class="team-list-data"> -->
-              <h3 class="team-list-title">Camila Garcia</h3>
-              <p class="team-list-text">Marketing</p>
-              <!-- </div> -->
-              <div class="team-list-social-media">
+              <div class="team-list-data">
+                <h3 class="team-list-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="instagram icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-instagram-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="instagram icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
 
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="twitter icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-twitter-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="twitter icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="facebook icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-facebook-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="facebook icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="linkedin icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-linkedin-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedin-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -398,75 +371,66 @@
                 width="264"
                 height="260"
               />
-              <!-- <div class="team-list-data"> -->
-              <h3 class="team-list-title">Daniel Wilson</h3>
-              <p class="team-list-text">Designer</p>
-              <!-- </div> -->
-              <div class="team-list-social-media">
+              <div class="team-list-data">
+                <h3 class="team-list-title">Daniel Wilson</h3>
+                <p class="team-list-text">Designer</p>
+
                 <ul class="team-social-list">
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="instagram icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-instagram-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="instagram icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
 
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="twitter icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-twitter-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="twitter icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="facebook icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-facebook-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="facebook icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-list-link">
-                      <div class="team-social-list-icon-wrapper">
-                        <svg
-                          class="team-social-list-icon"
-                          width="16"
-                          height="16"
-                          aria-label="linkedin icon"
-                        >
-                          <use
-                            href="./images/icons.svg#icon-linkedin-our-team"
-                          ></use>
-                        </svg>
-                      </div>
+                      <svg
+                        class="team-social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin icon"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedin-our-team"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
