--- a/index.html
+++ b/index.html
@@ -579,62 +579,54 @@
           </p>
         </div>
         <div class="footer-social-media">
-          <h3 class="footer-social-title">Social media</h3>
+          <p class="footer-social-text">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <div class="footer-social-list-icon-wrapper">
-                  <svg
-                    class="footer-social-list-icon"
-                    width="24"
-                    height="24"
-                    aria-label="instagram icon"
-                  >
-                    <use href="./images/icons.svg#icon-instagram-footer"></use>
-                  </svg>
-                </div>
+                <svg
+                  class="footer-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="instagram icon"
+                >
+                  <use href="./images/icons.svg#icon-instagram-footer"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <div class="footer-social-list-icon-wrapper">
-                  <svg
-                    class="footer-social-list-icon"
-                    width="24"
-                    height="24"
-                    aria-label="twitter icon"
-                  >
-                    <use href="./images/icons.svg#icon-twitter-footer"></use>
-                  </svg>
-                </div>
+                <svg
+                  class="footer-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="twitter icon"
+                >
+                  <use href="./images/icons.svg#icon-twitter-footer"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <div class="footer-social-list-icon-wrapper">
-                  <svg
-                    class="footer-social-list-icon"
-                    width="24"
-                    height="24"
-                    aria-label="facebook icon"
-                  >
-                    <use href="./images/icons.svg#icon-facebook-footer"></use>
-                  </svg>
-                </div>
+                <svg
+                  class="footer-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="facebook icon"
+                >
+                  <use href="./images/icons.svg#icon-facebook-footer"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <div class="footer-social-list-icon-wrapper">
-                  <svg
-                    class="footer-social-list-icon"
-                    width="24"
-                    height="24"
-                    aria-label="linkedin icon"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin-footer"></use>
-                  </svg>
-                </div>
+                <svg
+                  class="footer-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="linkedin icon"
+                >
+                  <use href="./images/icons.svg#icon-linkedin-footer"></use>
+                </svg>
               </a>
             </li>
           </ul>
