--- a/index.html
+++ b/index.html
@@ -748,12 +748,12 @@
             <input
               type="checkbox"
               class="feedback-form-privacy-checkbox visually-hidden"
-              name="privacy-policy"
-              id="privacy-policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               required
             />
-            <label for="privacy-policy" class="feedback-form-checkbox-label">
+            <label for="user-privacy" class="feedback-form-checkbox-label">
               <span class="feedback-form-own-checkbox">
                 <svg
                   class="feedback-form-own-checkbox-icon"
