--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
       </div>
     </footer>
     <!-- Backdrop  -->
-    <div class="backdrop is-open">
+    <div class="backdrop ais-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
@@ -935,7 +935,7 @@
       </div>
     </div>
 
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu ais-open">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
           <svg
@@ -950,7 +950,9 @@
 
         <ul class="mobile-nav-menu-list">
           <li class="mobile-nav-menu-item">
-            <a class="mobile-nav-menu-link" href="./index.html">Studio</a>
+            <a class="mobile-nav-menu-link studio-link" href="./index.html"
+              >Studio</a
+            >
           </li>
           <li class="mobile-nav-menu-item">
             <a class="mobile-nav-menu-link" href>Portfolio</a>
@@ -970,7 +972,9 @@
                 >
               </li>
               <li class="mobile-menu-adress-item">
-                <a class="mobile-menu-adress-link" href="tel:+110001111111"
+                <a
+                  class="mobile-menu-adress-link tel-link"
+                  href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
