--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <!-- JS -->
-    <!-- <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script> -->
+
     <!-- Google Fonts link -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
@@ -47,7 +41,7 @@
             </li>
           </ul>
         </nav>
-        <button class="menu-open-btn" type="button">
+        <button class="menu-open-btn js-open-menu" type="button">
           <svg
             class="menu-open-btn-icon"
             aria-label="mobile menu open icon"
@@ -166,13 +160,13 @@
           <ul class="team-list">
             <li class="team-list-item">
               <img
+                class="team-list-img"
+                src="./images/our-team-img/mark-guerrero.jpg"
+                alt="Mark Guerrero photo"
                 srcset="
                   ./images/our-team-img/mark-guerrero.jpg     1x,
                   ./images/our-team-img/mark-guerrero-@2x.jpg 2x
                 "
-                class="team-list-img"
-                src="./images/our-team-img/mark-guerrero.jpg"
-                alt="Mark Guerrero photo"
                 width="264"
                 height="260"
               />
@@ -243,13 +237,13 @@
             </li>
             <li class="team-list-item">
               <img
+                class="team-list-img tom-ford"
+                src="./images/our-team-img/tom-ford.jpg"
+                alt="Tom Ford photo"
                 srcset="
                   ./images/our-team-img/tom-ford.jpg     1x,
                   ./images/our-team-img/tom-ford-@2x.jpg 2x
                 "
-                class="team-list-img tom-ford"
-                src="./images/our-team-img/tom-ford.jpg"
-                alt="Tom Ford photo"
                 width="264"
                 height="260"
               />
@@ -320,13 +314,13 @@
             </li>
             <li class="team-list-item">
               <img
+                class="team-list-img"
+                src="./images/our-team-img/camila-garcia.jpg"
+                alt="Camila Garcia photo"
                 srcset="
                   ./images/our-team-img/camila-garcia.jpg     1x,
                   ./images/our-team-img/camila-garcia-@2x.jpg 2x
                 "
-                class="team-list-img"
-                src="./images/our-team-img/camila-garcia.jpg"
-                alt="Camila Garcia photo"
                 width="264"
                 height="260"
               />
@@ -397,13 +391,13 @@
             </li>
             <li class="team-list-item">
               <img
+                class="team-list-img"
+                src="./images/our-team-img/daniel-wilson.jpg"
+                alt="Daniel Wilson photo"
                 srcset="
                   ./images/our-team-img/daniel-wilson.jpg     1x,
                   ./images/our-team-img/daniel-wilson-@2x.jpg 2x
                 "
-                class="team-list-img"
-                src="./images/our-team-img/daniel-wilson.jpg"
-                alt="Daniel Wilson photo"
                 width="264"
                 height="260"
               />
@@ -830,7 +824,7 @@
       </div>
     </footer>
     <!-- Backdrop  -->
-    <div class="backdrop is-open">
+    <div class="backdrop is-open close-modal">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
@@ -942,9 +936,9 @@
       </div>
     </div>
 
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu is-open js-menu-container">
       <div class="container mobile-menu-container">
-        <button class="mobile-menu-close-btn" type="button">
+        <button class="mobile-menu-close-btn js-close-menu" type="button">
           <svg
             class="mobile-menu-close-icon"
             aria-label="close icon"
@@ -1040,5 +1034,12 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      defer
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
